dev: remove plugin - eslint airbnb rules 제거

--- a/package.json
+++ b/package.json
@@ -53,15 +53,16 @@
   },
   "packageManager": "yarn@3.5.0",
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.10.0",
     "@types/eslint": "^8",
     "@types/prettier": "^2",
-    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.58.0",
     "@typescript-eslint/parser": "latest",
     "eslint": "^8.38.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-emotion": "^11.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
